--- a/ToolsForDataScienceNotebook.ipynb
+++ b/ToolsForDataScienceNotebook.ipynb
@@ -69,11 +69,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Data Science Tools | |\n",
-    "| -----| ----- |\n",
-    "| | Jupyter Notebook |\n",
-    "| | Rstudio |\n",
-    "| | Spyder |"
+    "| Data Science Tools |\n",
+    "| -----|\n",
+    "| Jupyter Notebook |\n",
+    "| Rstudio |\n",
+    "| Spyder |"
    ]
   },
   {
