--- a/ToolsForDataScienceNotebook.ipynb
+++ b/ToolsForDataScienceNotebook.ipynb
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Author\n",
+    "##Author\n",
     "\n",
     "Victot Eduardo Cauvilla De Oliveira"
    ]
