--- a/Data Visualization with Python/DV0101EN-Exercise-Pie-Charts-Box-Plots-Scatter-Plots-and-Bubble-Plots.ipynb
+++ b/Data Visualization with Python/DV0101EN-Exercise-Pie-Charts-Box-Plots-Scatter-Plots-and-Bubble-Plots.ipynb
@@ -497,7 +497,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Victor Eduardo\\AppData\\Local\\Temp\\ipykernel_1176\\3015018611.py:14: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "C:\\Users\\Victor Eduardo\\AppData\\Local\\Temp\\ipykernel_7528\\3015018611.py:14: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  df_can['Total'] = df_can.sum(axis=1)\n"
      ]
     }
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -1536,7 +1536,7 @@
        "1984      1527   5704"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -1678,7 +1678,7 @@
        "max      42584.000000  36210.000000"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -1984,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -2597,7 +2597,7 @@
        "[15 rows x 38 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2649,7 +2649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -2739,7 +2739,7 @@
        "Pakistan                                             10591   65302  127598"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2808,7 +2808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -2912,7 +2912,7 @@
        "max    179171.000000  261966.000000  340385.000000"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2957,7 +2957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -3041,7 +3041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -3106,7 +3106,7 @@
        "1   China  32003  161528  340385"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3191,7 +3191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -3267,7 +3267,7 @@
        "4  1984   73417"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3304,7 +3304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -3379,7 +3379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -3397,7 +3397,7 @@
        "array([ 5.56709228e+03, -1.09261952e+07])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3427,7 +3427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -3455,7 +3455,7 @@
        "'No. Immigrants = 5567 * Year + -10926195'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3534,7 +3534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -3611,7 +3611,7 @@
        "4  1984    252"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3680,7 +3680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -3788,7 +3788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -4010,7 +4010,7 @@
        "[5 rows x 196 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4053,7 +4053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -4094,7 +4094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -4117,10 +4117,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x29ebe4d97f0>"
+       "<matplotlib.legend.Legend at 0x26e7d5e0c70>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4207,7 +4207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -4266,7 +4266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {
     "button": false,
     "jupyter": {
@@ -4281,10 +4281,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x29ebe77e9d0>"
+       "<matplotlib.legend.Legend at 0x26e7d4ff490>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
