--- a/Applied Data Science Capstone/labs-jupyter-spacex-Data wrangling.ipynb
+++ b/Applied Data Science Capstone/labs-jupyter-spacex-Data wrangling.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "9            0  B1011  -80.577366  28.561857  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "Name: LaunchSite, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,29 +622,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "GTO      27\n",
-       "ISS      21\n",
-       "VLEO     14\n",
-       "PO        9\n",
-       "LEO       7\n",
-       "SSO       5\n",
-       "MEO       3\n",
-       "ES-L1     1\n",
-       "HEO       1\n",
-       "SO        1\n",
-       "GEO       1\n",
-       "Name: Orbit, dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GTO      27\n",
+      "ISS      21\n",
+      "VLEO     14\n",
+      "PO        9\n",
+      "LEO       7\n",
+      "SSO       5\n",
+      "MEO       3\n",
+      "HEO       1\n",
+      "SO        1\n",
+      "ES-L1     1\n",
+      "GEO       1\n",
+      "Name: Orbit, dtype: int64\n"
+     ]
     }
    ],
    "source": [
