--- a/Applied Data Science Capstone/jupyter-labs-eda-sql-coursera.ipynb
+++ b/Applied Data Science Capstone/jupyter-labs-eda-sql-coursera.ipynb
@@ -1114,9 +1114,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1128,7 +1128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
